Update website: Fix mobile menu functionality and styling
- Fix mobile menu toggle visibility (hidden on desktop, visible on mobile)
- Change mobile menu background from black to white
- Update menu text colors for better contrast on white background
- Improve hover effects for white background
- Reorganize image folders (remove spaces from folder names)
- Add robots.txt and sitemap.xml for SEO
- Update all HTML files with latest content and styling
- Enhance mobile responsiveness and user experience

--- a/about.html
+++ b/about.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hakkımızda - Jasmine Art House. Sanatsal mirası koruma misyonu, tarihçemiz ve değerlerimiz.">
+    <meta property="og:title" content="Hakkımızda - Jasmine Art House">
+    <meta property="og:description" content="Sanatsal mirası koruma ve sergileme vizyonumuz.">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="tr_TR">
+    <meta name="twitter:card" content="summary_large_image">
+    <link rel="canonical" href="about.html">
+    <link rel="icon" href="/favicon.ico">
     <title>Hakkımızda - Jasmine Art House</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <style>
+      :focus-visible { outline: 2px solid #ff6b35; outline-offset: 2px; }
+      @media (prefers-reduced-motion: reduce) {
+        *, *::before, *::after { animation: none !important; transition: none !important; }
+      }
+      .artwork-image img, .related-image img, .thumbnail-img, .artwork-detail-image, .related-img { aspect-ratio: 4/3; width: 100%; height: auto; }
+    </style>
 </head>
 <body>
     <!-- Light Beam Animation -->
@@ -243,6 +258,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html> 
