--- a/gallery.html
+++ b/gallery.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Galeri - Jasmine Art House. Rönesans’tan Modern’e özenle seçilmiş başyapıtlar koleksiyonu.">
+    <meta property="og:title" content="Galeri - Jasmine Art House">
+    <meta property="og:description" content="Zamansız başyapıtları keşfedin.">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="tr_TR">
+    <meta name="twitter:card" content="summary_large_image">
+    <link rel="canonical" href="gallery.html">
+    <link rel="icon" href="/favicon.ico">
     <title>Galeri - Jasmine Art House</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <style>
+      :focus-visible { outline: 2px solid #ff6b35; outline-offset: 2px; }
+      @media (prefers-reduced-motion: reduce) {
+        *, *::before, *::after { animation: none !important; transition: none !important; }
+      }
+      .artwork-image img, .related-image img, .thumbnail-img, .artwork-detail-image, .related-img { aspect-ratio: 4/3; width: 100%; height: auto; }
+    </style>
 </head>
 <body>
     <!-- Light Beam Animation -->
@@ -73,7 +88,7 @@
                 <!-- Renaissance Period -->
                 <div class="gallery-item-extended" data-category="renaissance">
                     <div class="artwork-image">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Mona_Lisa%2C_by_Leonardo_da_Vinci%2C_from_C2RMF_retouched.jpg/687px-Mona_Lisa%2C_by_Leonardo_da_Vinci%2C_from_C2RMF_retouched.jpg" alt="Mona Lisa" class="artwork-img" loading="lazy">
+                        <img src="cizimler-optimized/69396175_2595091537264389_3640858034384788996_n.jpg" alt="Mona Lisa" class="artwork-img" loading="lazy">
                     </div>
                     <div class="artwork-info-extended">
                         <h3>Mona Lisa</h3>
@@ -92,7 +107,7 @@
 
                 <div class="gallery-item-extended" data-category="renaissance">
                     <div class="artwork-image">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/1665_Girl_with_a_Pearl_Earring.jpg/800px-1665_Girl_with_a_Pearl_Earring.jpg" alt="Girl with a Pearl Earring" class="artwork-img" loading="lazy">
+                        <img src="cizimler-optimized/72432241_2445188949082244_9065543067191274815_n.jpg" alt="Girl with a Pearl Earring" class="artwork-img" loading="lazy">
                     </div>
                     <div class="artwork-info-extended">
                         <h3>Girl with a Pearl Earring</h3>
@@ -112,7 +127,7 @@
                 <!-- Impressionism Period -->
                 <div class="gallery-item-extended" data-category="impressionism">
                     <div class="artwork-image">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/Monet_-_Impression%2C_Sunrise.jpg/1280px-Monet_-_Impression%2C_Sunrise.jpg" alt="Impression, Sunrise" class="artwork-img" loading="lazy">
+                        <img src="cizimler-optimized/173182929_1131649517309808_3358326417970726616_n.jpg" alt="Impression, Sunrise" class="artwork-img" loading="lazy">
                     </div>
                     <div class="artwork-info-extended">
                         <h3>Impression, Sunrise</h3>
@@ -131,7 +146,7 @@
 
                 <div class="gallery-item-extended" data-category="impressionism">
                     <div class="artwork-image">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/Edouard_Manet_-_Luncheon_on_the_Grass_-_Google_Art_Project.jpg/1280px-Edouard_Manet_-_Luncheon_on_the_Grass_-_Google_Art_Project.jpg" alt="Luncheon on the Grass" class="artwork-img" loading="lazy">
+                        <img src="cizimler-optimized/262103182_1800396446812884_7002172921974750575_n.jpg" alt="Luncheon on the Grass" class="artwork-img" loading="lazy">
                     </div>
                     <div class="artwork-info-extended">
                         <h3>Luncheon on the Grass</h3>
@@ -151,7 +166,7 @@
                 <!-- Post-Impressionism Period -->
                 <div class="gallery-item-extended" data-category="post-impressionism">
                     <div class="artwork-image">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/Van_Gogh_-_Starry_Night_-_Google_Art_Project.jpg/1280px-Van_Gogh_-_Starry_Night_-_Google_Art_Project.jpg" alt="The Starry Night" class="artwork-img" loading="lazy">
+                        <img src="art-house-optimized/489029899_18244397203303043_8458864157204107527_n.jpg" alt="The Starry Night" class="artwork-img" loading="lazy">
                     </div>
                     <div class="artwork-info-extended">
                         <h3>The Starry Night</h3>
@@ -170,7 +185,7 @@
 
                 <div class="gallery-item-extended" data-category="post-impressionism">
                     <div class="artwork-image">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Vincent_van_Gogh_-_Self-Portrait_-_Google_Art_Project_%28454045%29.jpg/800px-Vincent_van_Gogh_-_Self-Portrait_-_Google_Art_Project_%28454045%29.jpg" alt="Self-Portrait" class="artwork-img" loading="lazy">
+                        <img src="art-house-optimized/47582516_407205326757386_3643775761944381717_n.jpg" alt="Self-Portrait" class="artwork-img" loading="lazy">
                     </div>
                     <div class="artwork-info-extended">
                         <h3>Self-Portrait</h3>
@@ -190,7 +205,7 @@
                 <!-- Modern Period -->
                 <div class="gallery-item-extended" data-category="modern">
                     <div class="artwork-image">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Edvard_Munch%2C_1893%2C_The_Scream%2C_oil%2C_tempera_and_pastel_on_cardboard%2C_91_x_73_cm%2C_National_Gallery_of_Norway.jpg/800px-Edvard_Munch%2C_1893%2C_The_Scream%2C_oil%2C_tempera_and_pastel_on_cardboard%2C_91_x_73_cm%2C_National_Gallery_of_Norway.jpg" alt="The Scream" class="artwork-img" loading="lazy">
+                        <img src="art-house-optimized/266746404_641421820225995_4152542423772866702_n.jpg" alt="The Scream" class="artwork-img" loading="lazy">
                     </div>
                     <div class="artwork-info-extended">
                         <h3>The Scream</h3>
@@ -209,7 +224,7 @@
 
                 <div class="gallery-item-extended" data-category="modern">
                     <div class="artwork-image">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Amadeo_Souza-Cardoso_-_Cabe%C3%A7a_%28Head%29.jpg/800px-Amadeo_Souza-Cardoso_-_Cabe%C3%A7a_%28Head%29.jpg" alt="Head" class="artwork-img" loading="lazy">
+                        <img src="art-house-optimized/524751663_18255950344303043_5384485881421075244_n.jpg" alt="Head" class="artwork-img" loading="lazy">
                     </div>
                     <div class="artwork-info-extended">
                         <h3>Head</h3>
@@ -297,7 +312,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <script>
         // Gallery filter functionality
         document.addEventListener('DOMContentLoaded', function() {
