--- a/login.html
+++ b/login.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="description" content="Yönetici Girişi - Jasmine Art House (demo)">
+    <meta property="og:title" content="Yönetici Girişi - Jasmine Art House">
+    <meta property="og:description" content="Admin giriş sayfası (demo)">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="tr_TR">
+    <meta name="twitter:card" content="summary_large_image">
+    <link rel="canonical" href="login.html">
+    <link rel="icon" href="/favicon.ico">
     <title>Yönetici Girişi - Jasmine Art House</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +37,7 @@
         <div class="login-card">
             <div class="login-header">
                 <div class="login-logo">
-                    <a href="index.html" style="text-decoration: none; color: inherit;">
+                    <a href="index.html" class="unstyled-link">
                         <h1>Jasmine Art House</h1>
                         <p>Yönetici Paneli</p>
                     </a>
